task10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: p-farrukh
spec:
  ingressClassName: nginx
  rules:
  - host: almost-last-practice-f-sadatov.sts404.uz
    http:
      paths:
      - path: /config
        pathType: Exact
        backend:
          service:
            name: flask-application-2
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: something-app
            port:
              number: 80
status:
  loadBalancer: {}
